--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/severcan4165/RandomUserV2",
+  "homepage": "https://severcan4165.github.io/RandomUserV2",
   "name": "my-first-app",
   "version": "0.1.0",
   "private": true,
